@@ -1,0 +1,31 @@
+1. Generate placeholders for the new changelog item
+
+```bash
+yarn generate
+```
+
+2. Prepare the changelog item
+
+```bash
+yarn prepare
+```
+
+3. Write a YouTube script
+
+```bash
+yarn youtube
+```
+
+4. Record a YouTube video
+
+5. Upload the video to YouTube and announce it
+
+```bash
+yarn announce
+```
+
+6. Include all the social links in the changelog item.
+
+7. Deploy the website and check the changelog item.
+
+8. Deploy the app and check the changelog item.
