@@ -1,0 +1,13 @@
+Hey everyone, Radzion here. Today I want to quickly share some updates that I believe will make your experience with Increaser even smoother.
+
+After finishing a focus session, you'll now see the break widget appear in the same spot as the YouTube focus music player, and it shows up on every page. This change makes the transition to break time feel much more natural.
+
+We've also improved the way you manage break notifications. Now it's easier to adjust your preferences or toggle break notification sounds, giving you more control over your break experience.
+
+In addition, you can now select a default break duration in your preferences. This means you don't have to set your break length every time—you can have it standardized to fit your workflow.
+
+For the focus task input, we added a suggestion to select a task for today or an overdue one, helping you keep on track with your daily priorities.
+
+Lastly, on all pages with an items list, if no items match your current filter, the app will prompt you to either add an item or reset the filter. And when there's no filter and no data, you'll be encouraged to create a new item instead of facing an empty screen.
+
+That's it for now. Try these updates out and let me know what you think!
